--- a/features/fixtures/simple/docker-compose.yml
+++ b/features/fixtures/simple/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 
 services:
   runner:
-    image: alpine
+    image: alpine:3.6
     # Just keep it up for one minute. Should be enough for the tests.
     entrypoint: sleep 60
 
