--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ rvm:
   - 2.3
   - 2.4
 
-install: gem install cucumber
+install: gem install cucumber codecov
 
 before_script: export PATH=$PATH:$PWD
 
