--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,6 +1,6 @@
 name: Run tests and publish
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   build:
@@ -22,10 +22,10 @@ jobs:
         cucumber
 
   publish:
-    name: Build + Publish
+    name: publish
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/master'
+    if: startsWith(github.ref, 'refs/tags/')
 
     steps:
     - uses: actions/checkout@v2
@@ -36,6 +36,8 @@ jobs:
 
     - name: Publish to RubyGems
       run: |
+        # Replace version in gemspec with tag name.
+        sed s/VERSION/${GITHUB_REF/refs\/tags\//}/ dce.gemspec
         mkdir -p $HOME/.gem
         touch $HOME/.gem/credentials
         chmod 0600 $HOME/.gem/credentials
