Prepare fixtures for testing in CI
Also bump runtime down to one minute again, wasn't the problem.

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,6 +15,10 @@ jobs:
       uses: actions/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby }}
+    - name: Prepare fixtures
+      run: |
+        cd features/fixtures/shell
+        docker-compose build
     - name: Run Cucumber tests
       run: |
         gem install cucumber codecov
