--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Set up Ruby 2.4
       uses: actions/setup-ruby@v1
       with:
-        version: 2.4
+        ruby-version: 2.4
 
     - name: Publish to RubyGems
       run: |
