--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -8,10 +8,10 @@ jobs:
 
     strategy:
       matrix:
-        ruby: [2.5, 2.6, 2.7]
+        ruby: [2.7, 3.0, 3.1, 3.2]
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Ruby 2.6
+    - name: Set up Ruby
       uses: actions/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby }}
