Add codecov token for dependabot

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -27,6 +27,8 @@ jobs:
 
     - uses: codecov/codecov-action@v3
       with:
+        # Needed for Dependabot PRs.
+        token: ${{ secrets.CODECOV_TOKEN }}
         fail_ci_if_error: true # optional (default = false)
 
   publish:
