Use docker compose sub-command

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Prepare fixtures
       run: |
         cd features/fixtures/shell
-        docker-compose build
+        docker compose build
     - name: Run Cucumber tests
       run: |
         gem install cucumber simplecov-cobertura
